# ode-base

./: Cargo.toml  README.md  build.rs
include/: bridge.hpp  bridge_bindings.rs
src/: bridge.cpp  lib.rs  ode.rs
src/ode/: krp.rs
